--- a/PA1_template.html
+++ b/PA1_template.html
@@ -276,6 +276,7 @@ monitor_no_na$day_type &lt;- c('weekend', 'weekday')[(weekdays(monitor_no_na$dat
 
 paste(&quot;The data set contains &quot;, sum(monitor_no_na$day_type == 'weekday'), &quot;weekdays and &quot;, sum(monitor_no_na$day_type == 'weekend'), &quot;weekend days.&quot;)</code></pre>
 <pre><code>## [1] &quot;The data set contains  12960 weekdays and  4608 weekend days.&quot;</code></pre>
+<p>Now we’ll plot weekday results versus weekend results by mean steps per interval.</p>
 <pre class="r"><code>##using gridExtra to arrange the plots at the end
 require(gridExtra)</code></pre>
 <pre><code>## Loading required package: gridExtra</code></pre>
